--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,8 @@
 	path = unitek-solusi/OCA-partner-contact
 	url = git@github.com:unitek-solusi/OCA-partner-contact.git
 	branch = 11.0
+
+[submodule "unitek-solusi/OCA-server-ux"]
+	path = unitek-solusi/OCA-server-ux
+	url = git@github.com:unitek-solusi/OCA-server-ux.git
+	branch = 11.0
