[ADD] submodule unitek-solusi/OCA-web

--- a/.gitmodules
+++ b/.gitmodules
@@ -12,3 +12,8 @@
 	path = unitek-solusi/OCA-sale-workflow
 	url = git@github.com:unitek-solusi/OCA-sale-workflow.git
 	branch = 11.0
+
+[submodule "unitek-solusi/OCA-web"]
+	path = unitek-solusi/OCA-web
+	url = git@github.com:unitek-solusi/OCA-web.git
+	branch = 11.0
