--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,8 @@
 	path = unitek-solusi/OCA-contract
 	url = git@github.com:unitek-solusi/OCA-contract.git
 	branch = 11.0
+
+[submodule "unitek-solusi/OCA-pos"]
+	path = unitek-solusi/OCA-pos
+	url = git@github.com:unitek-solusi/OCA-pos.git
+	branch = 11.0
