--- a/.gitmodules
+++ b/.gitmodules
@@ -27,3 +27,8 @@
 	path = unitek-solusi/OCA-pos
 	url = git@github.com:unitek-solusi/OCA-pos.git
 	branch = 11.0
+
+[submodule "unitek-solusi/OCA-account-invoicing"]
+	path = unitek-solusi/OCA-account-invoicing
+	url = git@github.com:unitek-solusi/OCA-account-invoicing.git
+	branch = 11.0
