--- a/.gitmodules
+++ b/.gitmodules
@@ -57,3 +57,8 @@
 	path = unitek-solusi/OCA-account-financial-tools
 	url = git@github.com:unitek-solusi/OCA-account-financial-tools.git
 	branch = 11.0
+
+[submodule "unitek-solusi/OCA-project"]
+	path = unitek-solusi/OCA-project
+	url = git@github.com:unitek-solusi/OCA-project.git
+	branch = 11.0
