--- a/.gitmodules
+++ b/.gitmodules
@@ -72,3 +72,8 @@
 	path = unitek-solusi/OCA-account-invoice-reporting
 	url = git@github.com:unitek-solusi/OCA-account-invoice-reporting.git
 	branch = 11.0
+
+[submodule "unitek-solusi/OCA-project-reporting"]
+	path = unitek-solusi/OCA-project-reporting
+	url = git@github.com:unitek-solusi/OCA-project-reporting.git
+	branch = 11.0
