--- a/.gitmodules
+++ b/.gitmodules
@@ -73,3 +73,8 @@
 	url = git@github.com:unitek-solusi/OCA-account-invoice-reporting.git
 	branch = 11.0
 
+
+[submodule "unitek-solusi/OCA-project-reporting"]
+	path = unitek-solusi/OCA-project-reporting
+	url = git@github.com:unitek-solusi/OCA-project-reporting.git
+	branch = 11.0
